@@ -173,8 +173,9 @@ export(loglikCopula, loglikMvdc)
 export(fitCopula, fitMvdc, optimMeth)
 exportClasses(fittedMV, fitCopula, fitMvdc)
 
-## some parameters can be fixed ( ./R/fixedPar.R ) :
+## some parameters can be fixed ( ./R/fixedPar.R , ./man/fixedPar.Rd ) :
 export(fixParam, "fixedParam<-")
+export(isFree, isFreeP, nParam)# (utilities)
 
 ## estimation of tail dependence
 export(fitLambda)
